--- a/server/views/layouts/default.pug
+++ b/server/views/layouts/default.pug
@@ -7,10 +7,4 @@ html
     include ../includes/style
   body
   block content
-    .container
-      .row
-        .col-md-8
-          h1 Hi #{you}
-          p This is #{me}
-        .col-md-4
-          p 测试动态PUG模板引擎
+  include ../includes/script
