--- a/server/views/includes/style.pug
+++ b/server/views/includes/style.pug
@@ -1,1 +1,2 @@
 link(href='https://cdn.bootcss.com/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css' rel='stylesheet')
+link(href='https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.25.0/DPlayer.min.css' rel='stylesheet')
